# duckdb_markdown

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Makefile  README.md  RELEASE_NOTES_v1.3.0.md  TODO.md  devenv.nix  extension_config.cmake  make.out  mkdocs.yml  vcpkg-configuration.json  vcpkg.json  wasm-community-test.html  wasm-test.html
.github/workflows/: MainDistributionPipeline.yml  WasmTest.yml
docs/: DUCKDB_API_MIGRATION.md  WASM.md  doc_block_spec.md  ecosystem.md  index.md  markdown_doc_block.md
src/: duck_block_functions.cpp  markdown_copy.cpp  markdown_extension.cpp  markdown_extraction_functions.cpp  markdown_reader_files.cpp  markdown_reader_functions.cpp  markdown_scalar_functions.cpp  markdown_types.cpp  markdown_utils.cpp
src/include/: duck_block_functions.hpp  duckdb_compat.hpp  markdown_copy.hpp  markdown_extension.hpp  markdown_extraction_functions.hpp  markdown_reader.hpp  markdown_scalar_functions.hpp  markdown_types.hpp  markdown_utils.hpp
test/: README.md
test/data/: blocks_basic.md  blocks_frontmatter.md  blocks_hr.md  blocks_nested.md  blocks_special.md  blocks_table.md  blocks_unicode.md  wikilinks_tags_sample.md
test/docs/: code_example.md  code_test.md  extract_test.md  images_test.md  metadata_example.md  test.md  test_markdown_files.md
test/markdown/: code_examples.md  links.md  metadata.md  sections_test.md  simple.md  structured.md
test/md/: tab_in_cell.md
test/sql/: doc_inline.test  docs_roundtrip.test  duck_block.test  duck_block_roundtrip.test  frontmatter_raw_and_json_escape.test  html_to_markdown.test  markdown.test  markdown_api.test  markdown_basic.test  markdown_blocks.test  markdown_content_modes.test  markdown_copy.test  markdown_extraction_comprehensive.test  markdown_extraction_errors.test  markdown_extraction_integration.test  markdown_filesystem_errors_simple.test  markdown_glob.test  markdown_glob_unit_simple.test  markdown_newline_test.test  markdown_realworld.test  markdown_sections_ast.test  markdown_sections_features.test  markdown_sections_varchar.test  markdown_security_regression.test  md_stats_heading_count.test  readme_integration.test  wikilinks_tags.test
test/wasm/: README.md  package.json  run_wasm_checks.sh
vcpkg_ports/cmark-gfm/: portfile.cmake  vcpkg.json
